Content update for letters upload screen for S78 LPAQ

--- a/app/views/manage/questionnaire/v14/notified/letters-upload.html
+++ b/app/views/manage/questionnaire/v14/notified/letters-upload.html
@@ -12,6 +12,10 @@
     {{ title }}
   </h1>
 
+  <p class="govuk-body">
+    We need a copy of what you sent to notify neighbours about the appeal.
+  </p>
+
   {% set uploadHtml %}
     {{ govukFileUpload({
       id: 'letters-upload',
