Hearing links updated

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -333,7 +333,8 @@
             </li>
             <li>
               <a href="/manage/appeals/v8/appeal-details?appeal-type=hearing&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=due&final-comments=&appellant-final-comments=complete&case-conference-date=complete&inquiry-date=&proofs=&appellant-proofs=&timings=&other-timings=&socg=due&hearing-date=complete&appeal-decided=">
-                Statement of common ground due, IP comments due
+                <!-- Statement of common ground due, IP comments due -->
+                Event date available
               </a>
             </li>
           </ul>
