Content review for development, planning application and site, updates

--- a/app/views/manage/questionnaire/index.html
+++ b/app/views/manage/questionnaire/index.html
@@ -33,7 +33,7 @@
     <p class="govuk-!-margin-bottom-2">Changes:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li>
-        content updates following the user research
+        content updates following user research
       </li>
       <li>
         simplification of Planning officer’s report section title
