--- a/app/views/manage/questionnaire/v14/constraints/affected-listed-building-check.html
+++ b/app/views/manage/questionnaire/v14/constraints/affected-listed-building-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Does the proposed development affect the setting of listed buildings?' %}
+{% set title = 'Does the development affect the setting of listed buildings?' %}
 
 {% block questions %}
 
