--- a/app/views/manage/questionnaire/v14/constraints/tree-order-check.html
+++ b/app/views/manage/questionnaire/v14/constraints/tree-order-check.html
@@ -1,13 +1,13 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Does a Tree Preservation Order (TPO) apply to any part of the appeal site?' %}
+{% set title = 'Does a Tree Preservation Order (TPO) apply to any part of the site?' %}
 
 {% block questions %}
 
   <span class="govuk-caption-l">
     Constraints, designations and other issues
   </span>
-  
+
   {{ govukRadios({
     idPrefix: 'tree-order-check',
     name: 'tree-order-check',
