--- a/app/views/manage/questionnaire/v14/po-report/supplementary-check.html
+++ b/app/views/manage/questionnaire/v14/po-report/supplementary-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Did any supplementary planning documents inform the outcome of the application?' %}
+{% set title = 'Did any supplementary planning documents inform the outcome of the planning application?' %}
 
 {% block questions %}
 
