--- a/app/views/manage/questionnaire/v14/constraints/listed-building-check.html
+++ b/app/views/manage/questionnaire/v14/constraints/listed-building-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Does the proposed development change a listed building?' %}
+{% set title = 'Does the development change a listed building?' %}
 
 {% set prototypeLinks = [
   {
