--- a/app/views/manage/questionnaire/v14/constraints/outstanding-natural-beauty.html
+++ b/app/views/manage/questionnaire/v14/constraints/outstanding-natural-beauty.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Is the appeal site in an area of outstanding natural beauty?' %}
+{% set title = 'Is the site in an area of outstanding natural beauty?' %}
 
 {% block questions %}
 
