--- a/app/views/manage/questionnaire/v14/env-impact/development-desc.html
+++ b/app/views/manage/questionnaire/v14/env-impact/development-desc.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Description of development' %}
+{% set title = 'Description of the development' %}
 
 {% block questions %}
 
