--- a/app/views/_includes/appellant/submitted-appeals.html
+++ b/app/views/_includes/appellant/submitted-appeals.html
@@ -1,6 +1,6 @@
 {% if data['submitted-appeals'] == 'no' %}
 
-  <h2 class="govuk-heading-l">
+  <h2 class="govuk-heading-l govuk-!-margin-top-3">
     Waiting for review
   </h2>
 
