--- a/app/views/appeal/appeals/v2/appellant-proofs.html
+++ b/app/views/appeal/appeals/v2/appellant-proofs.html
@@ -1,4 +1,4 @@
-{% extends '_layouts/layout-pins.html' %}
+{% extends '_layouts/layout-main.html' %}
 
 {% set title = "Your proof of evidence and witnesses" %}
 
