--- a/app/views/appeal/appeals/v2/r6-timings.html
+++ b/app/views/appeal/appeals/v2/r6-timings.html
@@ -1,4 +1,4 @@
-{% extends '_layouts/layout-pins.html' %}
+{% extends '_layouts/layout-main.html' %}
 
 {% set title = "Witness timings from other parties" %}
 
